# graph_theory

./: .gitignore  README.md
lab6/: CMakeLists.txt
lab6/files/: 1.txt  2.txt  3.txt  4.txt  sample_text.txt
lab6/include/: app.h  config.h  format.h  hash_dictionary.h  io.h  menu_item.h  rb_tree_dictionary.h  text_utils.h
lab6/src/: app.cpp  hash_dictionary.cpp  io.cpp  main.cpp  rb_tree_dictionary.cpp  text_utils.cpp
labs/: CMakeLists.txt
labs/include/: app.h  colors.h  command_handler.h  config.h  distribution.h  format.h  graph.h  helpers.h  io.h  matrix.h  menu.h  menu_.h  menu_func.h  menu_item.h
labs/src/: app.cpp  distibution.cpp  format.cpp  graph.cpp  helpers.cpp  io.cpp  main.cpp  matrix.cpp  menu.cpp  menu_.cpp  menu_func.cpp
